--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mongodb": "^6.13.1",
+    "mongoose": "^8.11.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
