--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "description": "",
   "scripts": {
-    "build": "npx tsc ./src --outDir ./dist",
+    "build": "npx tsc ./src/index.ts --outDir ./dist",
     "start": "node dist/index.js",
     "run": "npm run build && npm start",
     "dev": "nodemon src/index.ts",
