--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "npx tsc ./src/index.ts --outDir ./dist",
     "start": "node dist/index.js",
-    "run": "npm run build && npm start",
+    "build:run": "npm run build && npm start",
     "dev": "nodemon src/index.ts",
     "lint": "eslint src --ext .ts"
   },
